# fastapi-celery-flower-docker-boilerplate

./: Dockerfile  docker-compose.yml  docker.env  pyproject.toml
example/: .env  api.py  celery_config.py  celery_worker.py
